--- a/about.html
+++ b/about.html
@@ -26,11 +26,23 @@
                 <ul class="header-list">
                     <li class="list-item"><a href="index.html">Home</a></li>
                     <li class="list-item"><a href="works.html">Works</a></li>
-                    <li class="selected"><a href="contacts.html">Contacts</a></li>
+                    <li class="selected">About</a></li>
                 </ul>
             </div>
     
         </header>
     
+
+        <main>
+
+            <div class="container works-container">
+                <h1 class="font-franklin works-text"><i class="fa-brands fa-python"></i>  //  Python</h1>
+                <div class="python-div">
+                    <h5 class="works-description">As a developer with nearly half a decade of experience working with Python, I have had the opportunity to explore a variety of libraries and tools that have expanded my knowledge and skillset. One such library that I have had experience working with is <a href="https://discordpy.readthedocs.io/en/stable/">discord.py</a>, which has allowed me to dive into the world of chatbots. With this experience under my belt, I have applied my knowledge to a variety of projects, strenghtening my understanding of the language and its capabilities.</h5>
+                </div>
+            </div>
+
+        </main>
+
 </body>
 </html>
