--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
             <ul class="header-list">
                 <li class="selected">Home</li>
                 <li class="list-item"><a href="works.html">Works</a></li>
-                <li class="list-item"><a href="contacts.html">Contacts</a></li>
+                <li class="list-item"><a href="about.html">About</a></li>
             </ul>
         </div>
 
     </header>
 
     <main>
-        <div class="container main">
+        <div class="container main" width="10px">
 
             <div class="text">
             <h1 class="text-main">Aidas</h1>
+            <h5 class="font-archivo text-description">I am a skilled developer with 5 years of experience in coding. My expertise includes Python, HTML, CSS, and SQL. I have experience working with various libraries and frameworks such as discord.py and databases like PostgreSQL and SQLite. I am dedicated to delivering high-quality, efficient, and reliable software solutions.</h5>
             <div class="buttons">
                 <a href="https://github.com/Aiduxa" class="button"><i class="fa-brands fa-github"></i></a>
                 <a href="/works.html" class="button"><i class="fa-solid fa-image"></i></a>
