--- a/works.html
+++ b/works.html
@@ -25,8 +25,8 @@
         <div class="container">
             <ul class="header-list">
                 <li class="list-item"><a href="index.html">Home</a></li>
-                <li class="selected"><a href="works.html">Works</a></li>
-                <li class="list-item"><a href="contacts.html">Contacts</a></li>
+                <li class="selected">Works</li>
+                <li class="list-item"><a href="about.html">About</a></li>
             </ul>
         </div>
 
@@ -35,11 +35,6 @@
     <main>
 
         <section class="section-1">
-
-            <div class="container works-container">
-                <h1 class="font-franklin works-text">Introduction</h1>
-                <h5 class="font-franklin works-description">I'm a 17 year old guy with a passion of building future innovative software, I know <b>Python</b>, <b>HTML</b>, <b>CSS</b>, I have stumbled upon SQL structured databases like <b>PostgreSQL</b>, <b>SQLite</b></h5>
-            </div>
 
             <div class="container works-container">
                 <h1 class="font-franklin works-text">Current projects</h1>
